# homecare-agent

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
apps/api/: main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260703_000001_create_main_flow_tables.py
apps/api/app/: schemas.py
apps/api/app/agent/: graph.py  state.py
apps/api/app/api/routes/: agent_runs.py  attachments.py  auth.py  devices.py  fault_records.py  reminders.py  settings.py
apps/api/app/core/: config.py
apps/api/app/db/: database.py  models.py  seed.py  seed_runtime.py  store.py
apps/api/app/db/repositories/: agent_runs.py  attachments.py  devices.py  fault_records.py  reminders.py  seed_repository.py
apps/api/app/services/: intent_service.py  safety_service.py  warranty_service.py
apps/api/tests/: __init__.py  conftest.py  test_api_main_flow.py  test_safety.py  test_seed_runtime.py  test_warranty.py
apps/web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-ui.py
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api-client.ts  format.ts  mock-backend.ts  safety.ts  seed.ts  types.ts  warranty.ts
apps/web/public/: manifest.webmanifest
apps/web/store/: auth-store.ts  conversation-store.ts  ui-store.ts
docs/superpowers/plans/: 2026-07-03-frontend-backend-main-flow.md  2026-07-03-sqlite-persistence.md
docs/v0.1/: DESIGN.md  HomeCare_Agent_EXECUTION_PLAN.md  HomeCare_Agent_TEST_CASES.md  TECH_SPEC.md  prd.md
scripts/: dev.mjs  install-api.mjs
(+27 files in other folders)
