[project]
name = "homecare-agent-api"
version = "0.1.0"
description = "HomeCare Agent API — FastAPI + LangGraph backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "langgraph>=0.0.30",
    "python-dotenv>=1.0.0",
    "pytest>=8.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
